.................
Applications which use passlib's :class:`~passlib.context.CryptContext` should not be
greatly affected by this release; only one major deprecation was made:

    * [major] The :meth:`!encrypt` method was renamed to :meth:`!hash` to match the
      :class:`~passlib.ifc.PasswordHash` API changes listed above.
      The old method will remain around until Passlib 2.0.

A few internal options in have been deprecated:

    * [minor] The ``vary_rounds`` option has been deprecated,
      and will be removed in Passlib 2.0.  It provided very little security benefit,
      and was judged not worth the additional code complexity it requires.

    * [minor] The special wildcard ``all`` scheme name
      has been deprecated, and will be removed in Passlib 2.0.  The only legitimate use
      was to support ``vary_rounds``, which itself will be removed in 2.0.

Other Deprecations
..................
A few other assorted deprecations have been made:

    * The :func:`~passlib.utils.generate_secret` function has been deprecated
      in favor of the new :mod:`passlib.pwd` module, and the old function will be removed
      in Passlib 2.0.

    * Most of passlib's internal cryptography helpers have been moved from
      :mod:`passlib.utils` to :mod:`passlib.crypto`, and the APIs refactored.
      This allowed unification of various hash management routines,
      some speed ups to the HMAC and PBKDF2 primitives, and opens up the architecture
      to support more optional backend libraries.

      Compatibility wrappers will be kept in place at the old location until Passlib 2.0.

    * Some deprecations and internal changes have been made to the :mod:`passlib.utils.handlers`
      module, which provides the common framework Passlib uses to implement hashers.

      .. warning::

          Developers who are using :mod:`!passlib.utils.handlers` directly are strongly encouraged